--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.linting.pylintEnabled": true
+    "python.pythonPath": "C:\\Users\\14623\\PycharmProjects\\Blog\\venv\\Scripts\\python.exe",
+    "python.formatting.provider": "yapf",
+    "python.linting.pylintArgs": [
+        "--load-plugins",
+        "pylint_django",
+    ]
 }
